# R2toolM

./: settings.gradle
app/src/main/cpp/: CMakeLists.txt  buildNative.sh
app/src/main/cpp/busybox/: .busybox_unstripped.cmd  .config  .config.SV  .config.old  .kconfig.d  CMakeLists.txt  Config.in  Makefile  androidEnv.sh  busybox_unstripped  busybox_unstripped.map  busybox_unstripped.out  c  compile_commands.json  log.txt  tmp.S0r4Xmb345.c  配置文件  配置文件1
app/src/main/cpp/busybox/applets/: .applet_tables.cmd  .applets.o.cmd  .built-in.o.cmd  .usage.cmd  .usage_pod.cmd  applet_tables  usage  usage_pod
app/src/main/cpp/busybox/archival/: .ar.o.cmd  .bbunzip.o.cmd  .built-in.o.cmd  .bzip2.o.cmd  .chksum_and_xwrite_tar_header.o.cmd  .cpio.o.cmd  .dpkg.o.cmd  .dpkg_deb.o.cmd  .gzip.o.cmd  .lib.a.cmd  .rpm.o.cmd  .tar.c.swp  .tar.o.cmd  .unzip.o.cmd  bbunzip.c  gzip.c  tar.c
app/src/main/cpp/busybox/console-tools/: .built-in.o.cmd  .clear.o.cmd  .lib.a.cmd
app/src/main/cpp/busybox/coreutils/: .built-in.o.cmd  .cat.o.cmd  .chgrp.o.cmd  .chmod.o.cmd  .chown.o.cmd  .chroot.o.cmd  .cksum.o.cmd  .comm.o.cmd  .cp.o.cmd  .cut.o.cmd  .date.o.cmd  .dd.o.cmd  .df.o.cmd  .dirname.o.cmd  .dos2unix.o.cmd  .du.c.swp  .du.o.cmd  .echo.o.cmd  .env.o.cmd  .expand.o.cmd  .expr.o.cmd  .factor.o.cmd  .fold.o.cmd  .head.o.cmd  .lib.a.cmd  .link.o.cmd  .ln.o.cmd  .ls.o.cmd  .md5_sha1_sum.o.cmd  .mkdir.o.cmd  .mv.o.cmd  .nl.o.cmd  .nohup.o.cmd  .printenv.o.cmd  .printf.o.cmd  .pwd.o.cmd  .readlink.o.cmd  .realpath.o.cmd  .rm.o.cmd  .rmdir.o.cmd  (+21 more)
app/src/main/cpp/busybox/debianutils/: .built-in.o.cmd  .lib.a.cmd  .pipe_progress.o.cmd  .run_parts.o.cmd  .which.o.cmd
app/src/main/cpp/busybox/docs/: BusyBox.txt  busybox.1  busybox.pod
app/src/main/cpp/busybox/dowork/: .built-in.o.cmd  .dowork.o.cmd  .lib.a.cmd  .pv.c.swp  Config.in  Config.src  Kbuild  Kbuild.src  dowork.c  pv.c
app/src/main/cpp/busybox/e2fsprogs/: .built-in.o.cmd  .lib.a.cmd
app/src/main/cpp/busybox/editors/: .awk.o.cmd  .built-in.o.cmd  .cmp.o.cmd  .diff.o.cmd  .ed.o.cmd  .lib.a.cmd  .patch.o.cmd  .sed.o.cmd  .vi.o.cmd
app/src/main/cpp/busybox/findutils/: .built-in.o.cmd  .find.o.cmd  .grep.o.cmd  .lib.a.cmd  .xargs.o.cmd
app/src/main/cpp/busybox/include/: NUM_APPLETS.h  applet_tables.h  applets.h  applets.src.h  autoconf.h  bbconfigopts.h  bbconfigopts_bz2.h  usage.h  usage_compressed.h
app/src/main/cpp/busybox/init/: .built-in.o.cmd  .lib.a.cmd
app/src/main/cpp/busybox/klibc-utils/: .built-in.o.cmd  .lib.a.cmd
app/src/main/cpp/busybox/libbb/: .appletlib.o.cmd  .ask_confirmation.o.cmd  .auto_string.o.cmd  .bb_askpass.o.cmd  .bb_bswap_64.o.cmd  .bb_cat.o.cmd  .bb_do_delay.o.cmd  .bb_getgroups.o.cmd  .bb_getsockname.o.cmd  .bb_pwd.o.cmd  .bb_qsort.o.cmd  .bb_strtonum.o.cmd  .built-in.o.cmd  .change_identity.o.cmd  .chomp.o.cmd  .common_bufsiz.o.cmd  .concat_path_file.o.cmd  (+119 more)
app/src/main/cpp/exec/: CMakeLists.txt  Makefile  termux-exec.c
app/src/main/cpp/r2toolm/: CMakeLists.txt  native-lib.cpp  redirect.cpp  redirect.h  tool.cpp  tool.h
app/src/main/cpp/termux/: CMakeLists.txt  termux.c
app/src/main/cpp/tmp/: CMakeLists.txt  buildAndroidSo.sh  buildOneSo.sh  compile_commands.json
(+747 files in other folders)
